<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvHistoryDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHistoryWinLose" />

    <TextView
        android:id="@+id/tvHistoryWinLose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winLose"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivStar1gold"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="128dp"
        android:contentDescription="@string/computerhand"
        android:src="@drawable/star_empty"
        app:layout_constraintEnd_toStartOf="@+id/ivStar2gold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHistoryDate" />

    <ImageView
        android:id="@+id/ivStar2gold"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/playerhand"
        android:src="@drawable/star_empty"
        app:layout_constraintEnd_toStartOf="@+id/ivStar3gold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivStar1gold"
        app:layout_constraintTop_toBottomOf="@+id/tvHistoryDate" />

    <ImageView
        android:id="@+id/ivStar3gold"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="128dp"
        android:contentDescription="@string/playerhand"
        android:src="@drawable/star_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivStar2gold"
        app:layout_constraintTop_toBottomOf="@+id/tvHistoryDate" />

</androidx.constraintlayout.widget.ConstraintLayout>