<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundMainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageButton
        android:id="@+id/btnBigDrumLeft"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:backgroundTint="#00155E4B"
        android:contentDescription="TODO"
        android:scaleType="fitXY"
        android:src="@drawable/big_drum_left"
        android:text="@string/btnRock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSmallDrumLeft"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnBigDrumRight"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:backgroundTint="#00155E4B"
        android:scaleType="fitXY"
        android:src="@drawable/big_drum_right"
        android:text="@string/btnPaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnSmallDrumRight" />

    <ImageButton
        android:id="@+id/btnSmallDrumLeft"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="64dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:backgroundTint="#00155E4B"
        android:contentDescription="TODO"
        android:scaleType="fitXY"
        android:src="@drawable/small_drum"
        android:text="@string/btnScissors"
        app:layout_constraintBottom_toBottomOf="@+id/btnBigDrumLeft"
        app:layout_constraintEnd_toStartOf="@+id/btnSmallDrumRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnTssLeft" />

    <ImageButton
        android:id="@+id/btnSmallDrumRight"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="64dp"
        android:layout_weight="1"
        android:backgroundTint="#00155E4B"
        android:contentDescription="TODO"
        android:scaleType="fitXY"
        android:src="@drawable/small_drum"
        android:text="@string/btnScissors"
        app:layout_constraintBottom_toBottomOf="@+id/btnBigDrumRight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSmallDrumLeft"
        app:layout_constraintTop_toTopOf="@+id/btnTssRight" />

    <ImageButton
        android:id="@+id/btnTssRight"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:backgroundTint="#00155E4B"
        android:contentDescription="TODO"
        android:scaleType="fitXY"
        android:src="@drawable/tss"
        android:text="@string/btnScissors"
        app:layout_constraintBottom_toTopOf="@+id/btnBigDrumRight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnTssLeft" />

    <ImageButton
        android:id="@+id/btnTssLeft"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:backgroundTint="#00155E4B"
        android:contentDescription="TODO"
        android:orientation="horizontal"
        android:scaleType="fitXY"
        android:src="@drawable/tss"
        android:text="@string/btnScissors"
        app:layout_constraintBottom_toTopOf="@+id/btnBigDrumLeft"
        app:layout_constraintEnd_toStartOf="@+id/btnTssRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <TextView-->
<!--        android:id="@+id/vs"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:text="V.S."-->
<!--        android:textSize="30sp"-->
<!--        android:textStyle="bold|italic"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/computerHand"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/playerHand"-->
<!--        app:layout_constraintStart_toEndOf="@+id/computerHand"-->
<!--        app:layout_constraintTop_toTopOf="@+id/computerHand" />-->

<!--    <TextView-->
<!--        android:id="@+id/winlose"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="@string/winLose"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/pointsTxt" />-->

    <TextView
        android:id="@+id/pointsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <TextView-->
<!--        android:id="@+id/score"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="@string/score"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/winlose" />-->

    <ImageView
        android:id="@+id/cross2"
        android:layout_width="40dp"
        android:layout_height="54dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/pointsTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pointsTxt"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/cross1"
        android:layout_width="40dp"
        android:layout_height="54dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/pointsTxt"
        app:layout_constraintEnd_toStartOf="@+id/cross2"
        app:layout_constraintTop_toTopOf="@+id/pointsTxt"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/cross"
        android:layout_width="40dp"
        android:layout_height="54dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/pointsTxt"
        app:layout_constraintEnd_toStartOf="@+id/cross1"
        app:layout_constraintTop_toTopOf="@+id/pointsTxt"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/podium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="64dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/btnBigDrumRight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/podium" />

    <ImageView
        android:id="@+id/boxLeft"
        android:layout_width="78dp"
        android:layout_height="184dp"

        android:layout_marginBottom="128dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/podium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/podium"
        app:srcCompat="@drawable/box" />

    <ImageView
        android:id="@+id/boxRight"
        android:layout_width="78dp"
        android:layout_height="184dp"

        android:layout_marginBottom="128dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/podium"
        app:layout_constraintEnd_toEndOf="@+id/podium"
        app:layout_constraintTop_toTopOf="@+id/podium"
        app:srcCompat="@drawable/box" />

    <ImageView
        android:id="@+id/ivStar1g"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/computerhand"
        android:src="@drawable/star_empty"
        app:layout_constraintEnd_toStartOf="@+id/ivStar2g"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHistoryDate" />

    <ImageView
        android:id="@+id/ivStar2g"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/playerhand"
        android:src="@drawable/star_empty"
        app:layout_constraintEnd_toStartOf="@+id/ivStar3g"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivStar1g"
        app:layout_constraintTop_toBottomOf="@+id/tvHistoryDate" />

    <ImageView
        android:id="@+id/ivStar3g"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/playerhand"
        android:src="@drawable/star_empty"
        app:layout_constraintEnd_toStartOf="@+id/pointsTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivStar2g"
        app:layout_constraintTop_toBottomOf="@+id/tvHistoryDate" />

<!--Hidden-->
    <ImageView
        android:id="@+id/hiddenTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointsTxt"
        app:srcCompat="@drawable/ui_border" />


    <ImageView
        android:id="@+id/ivStar1hidden"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/computerhand"
        android:src="@drawable/star_empty"
        app:layout_constraintEnd_toStartOf="@+id/ivStar2hidden"
        app:layout_constraintStart_toEndOf="@+id/ivStar2g"
        app:layout_constraintStart_toStartOf="@+id/hiddenTest"
        app:layout_constraintTop_toTopOf="@+id/ivStar2hidden" />

    <ImageView
        android:id="@+id/ivStar2hidden"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/playerhand"
        android:src="@drawable/star_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hiddenTest" />

    <ImageView
        android:id="@+id/ivStar3hidden"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="121dp"
        android:contentDescription="@string/playerhand"
        android:src="@drawable/star_empty"
        app:layout_constraintEnd_toEndOf="@+id/hiddenTest"
        app:layout_constraintStart_toEndOf="@+id/ivStar2hidden"
        app:layout_constraintTop_toTopOf="@+id/ivStar2hidden" />

    <Button
        android:id="@+id/btnRetry"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Retry"
        app:layout_constraintBottom_toTopOf="@+id/btnLevelSelect"
        app:layout_constraintEnd_toEndOf="@+id/btnLevelSelect"
        app:layout_constraintStart_toStartOf="@+id/btnLevelSelect" />

    <Button
        android:id="@+id/btnLevelSelect"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Level Select"
        app:layout_constraintBottom_toTopOf="@+id/btnTitleScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnTitleScreen"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:text="Title Screen"
        app:layout_constraintBottom_toBottomOf="@+id/hiddenTest"
        app:layout_constraintEnd_toEndOf="@+id/btnLevelSelect"
        app:layout_constraintStart_toStartOf="@+id/btnLevelSelect" />

</androidx.constraintlayout.widget.ConstraintLayout>